--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ a{
 <body>
     <a href="./Task 01/firstwebsite.html">Task 01</a>
     <br>
-    <a href="./task 02/second.html">Task 02</a>
+    <a href="./task 02/second.html">Task 02.</a>
     <br>
     <a href="./task 03/mimisite.html">Task 03</a>
     <br>
