--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ a{
     <a href="./Task 08/table.html">Task 08</a>
     <br>
     <a href="./task 09/divtag.html">Task 09</a>
+    <a href="./task 09/divtag.html">Task 10</a>
+    
     
 </body>
 </html>
